<resources>
    <string name="app_name">Air Mail</string>
    <string name="pref_sync_summ">Allow app to sync data automatically, when wifi is avalible</string>
    <string name="pref_syncConnectionType">Sync interval</string>
    <string name="pref_sort_by_date">Date</string>

    <string name="pref_sync_list">pref_sync_list</string>
    <string name="pref_sort">pref_sort</string>
    <string name="pref_sync">pref_sync</string>
    <string name="pref_sync_title">Allow Sync</string>

    <string name="login_text">Login</string>
    <string name="welcome_text">Welcome</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>

    <string name="toolbar_text">PMSU_2019_Projekat</string>
    <string name="action_edit_text">Edit</string>
    <string name="folders_activity_text">Folders Activity</string>
    <string name="cf_hint_id">ID</string>
    <string name="cf_hint_name">Name:</string>
    <string name="folder_menu_edit">Edit</string>
    <string name="email_menu_delete">delete</string>
    <string name="email_menu_replay">replay</string>
    <string name="email_menu_replay_to_all">replay to all</string>
    <string name="email_menu_forward">forward</string>
    <string name="create_folder_menu_save">Save</string>
    <string name="create_folder_text">Create Folder Activity</string>
    <string name="action_save_text">Save</string>
    <string name="contacts_activity_toolbar" />
    <string name="contacts_activity_text" />
    <string name="send_email">Send</string>
    <string name="cancel">Cancel</string>
    <string name="profile_logout_button">logout</string>
    <string name="contact_return">return</string>
    <string name="create_contact_toolbar">Toolbar</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="create_new_email">create email</string>
    <string name="create_new_folder">create folder</string>
    <string name="create_contact_button">create contact</string>

    <string name="navigation_inbox">Inbox</string>
    <string name="navigation_contacts">Contacts</string>
    <string name="navigation_folders">Folders</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_logout">Logout</string>
    <string name="logout_txt">Logout</string>
    <string name="change_profile_txt">Change Profile</string>
    <string name="promptOperation">Chose operation</string>
    <string name="promptCondition">Chose condition</string>
    <string name="folder_menu_delete">delete folder</string>
    <string name="register_text">No account? Create one!</string>
    <string name="action_register_text">register</string>
    <string name="string_search">Search</string>
    <string name="manage_accounts_txt">Manage Accounts</string>
    <string name="add_account">Add account</string>

</resources>
