<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/AppTheme">

    <PreferenceCategory
        android:title="Auto data sync"
        android:key="sync_settings">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_sync"
            android:summary="@string/pref_sync_summ"
            android:title="@string/pref_sync_title" />

        <ListPreference
            android:dependency="@string/pref_sync"
            android:dialogTitle="@string/pref_syncConnectionType"
            android:entries="@array/pref_syncConnectionTypes_entries"
            android:entryValues="@array/pref_syncConnectionTypes_values"
            android:key="@string/pref_sync_list"
            android:title="@string/pref_syncConnectionType"
            android:summary="%s"
            android:defaultValue="1"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Sort mail by"
        android:key="sort_settings">

        <ListPreference
            android:dialogTitle="@string/pref_sort_by_date"
            android:entries="@array/pref_sort_by_date_entries"
            android:entryValues="@array/pref_sort_by_date_values"
            android:key="@string/pref_sort"
            android:title="@string/pref_sort_by_date"
            android:summary="%s"
            android:defaultValue="1"/>

    </PreferenceCategory>


</PreferenceScreen>