<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_emails"
            android:icon="@drawable/ic_menu_inbox"
            android:title="@string/navigation_inbox" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_contacts"
            android:title="@string/navigation_contacts" />
        <item
            android:id="@+id/nav_folders"
            android:icon="@drawable/ic_menu_folder"
            android:title="@string/navigation_folders" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation_settings" />
    </group>

</menu>
