<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/folder_toolbar_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/folder_menu_edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/folder_toolbar_create"
        android:icon="@drawable/ic_create_new_folder_white_24dp"
        android:orderInCategory="100"
        android:title="@string/create_new_folder"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/folder_toolbar_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/folder_menu_delete"
        app:showAsAction="always" />

</menu>