<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile_toolbar_save"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/action_save_text"
        app:showAsAction="always" />

    <item
        android:id="@+id/manage_accounts_btn"
        android:icon="@drawable/ic_account_mail_white_24dp"
        android:orderInCategory="100"
        android:title="@string/manage_accounts_txt"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/profile_toolbar_logout"
        android:icon="@drawable/ic_exit_white_24dp"
        android:orderInCategory="100"
        android:title="@string/logout_txt"
        app:showAsAction="always"/>


</menu>