<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@mipmap/backgroundnew3"
    tools:context=".activities.LoginActivity"
    android:padding="20dp">




    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="288dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textColor="#ecece7"
        android:textSize="32sp" />
    
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:errorEnabled="true">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/username_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:background="#ecece7"
        android:inputType="text"
        android:padding="20dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ecece7"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="20dp"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnStartEmails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="btnStartEmailsActivity"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="20dp"
        android:text="@string/login_text"
        />

</LinearLayout>